                                                         -*- coding: utf-8 -*-
Changes with Apache 2.0.61

  *) mpm_winnt: Prevent the parent-child pipe from leaking into other
     spawned processes, and ensure we have a /Device/null handle for
     stdout when running as-a-service.  [William Rowe]

  *) ApacheMonitor: Fix Windows Vista detection. [Mladen Turk]

Changes with Apache 2.0.60

  *) SECURITY: CVE-2007-3847 (cve.mitre.org)
     mod_proxy: Prevent reading past the end of a buffer when parsing
     date-related headers.  PR 41144.
     [Davi Arnaut, Nick Kew]

  *) SECURITY: CVE-2007-1863 (cve.mitre.org)
     mod_cache: Prevent segmentation fault if a Cache-Control header has
     no value.  [Niklas Edmundsson <nikke acc.umu.se>]

  *) SECURITY: CVE-2006-5752 (cve.mitre.org)
     mod_status: Fix a possible XSS attack against a site with a public
     server-status page and ExtendedStatus enabled, for browsers which
     perform charset "detection".  Reported by Stefan Esser.  [Joe Orton]

  *) SECURITY: CVE-2007-3304 (cve.mitre.org)
     prefork, worker MPMs: Ensure that the parent process cannot
     be forced to kill processes outside its process group. 
     [Joe Orton, Jim Jagielski]

  *) mod_so: Solve dev's confusion by reporting expected/seen module
     magic signatures when failing with a 'garbled' message, and solve
     user's confusion by pointing out 'perhaps compiled for a different
     version of apache?'.  [William Rowe]

  *) mod_ssl: initialize thread locks before initializing the hardware
     acceleration library, so the latter can make use of the former. 
     PR 20951. [<adunn ncipher.com>]

  *) mod_ssl: Support limited buffering of request bodies to allow 
     per-location renegotiation to proceed.  PR 12355.  [Joe Orton]

  *) mod_cgi, mod_cgid: Don't return apr_status_t error value
     from input filter chain. PR 31759 (mutated). [Jo Rhett,
     Nick Kew]

  *) htdbm: Fix crash processing -d option in 64-bit mode on HP-UX.