@@ -133,23 +133,6 @@ PATCHES PROPOSED TO BACKPORT FROM TRUNK:
          http://svn.apache.org/viewcvs.cgi?rev=102870&view=rev
        +1: wrowe, colm
 
-    * log core: Fix issue which could cause piped loggers to be orphaned 
-      and never terminate after a graceful restart. PR 40651. [Joe Orton, 
-      Ruediger Pluem]
-        http://svn.apache.org/viewvc?view=rev&revision=452431
-      log core: fix the new piped logger case where we couldn't connect 
-      the replacement stderr logger's stderr to the NULL stdout stream.  
-      Continue in this case, since the previous alternative of no error 
-      logging at all (/dev/null) is far worse. [William Rowe]
-        http://svn.apache.org/viewvc?view=rev&revision=568326
-      r452431 plus r568326; adjusted for 2.0 (note second iteration!);
-        http://people.apache.org/~wrowe/r568326-backport-2.0-r2.patch
-      disambiguate an error message to diagnose future error reports
-        http://svn.apache.org/viewvc?view=rev&revision=568322
-        +1: wrowe
-        rpluem says: +1 once r568446 is backported.
-        jim: agree with rpluem
-
     * main core: Emit errors during the initial apr_app_initialize()
       or apr_pool_create() (when apr-based error reporting is not ready).
       [William Rowe, Jeff Trawick]
